# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.17

  - Fix for Bug#95503 (29821029), Operator IN not mapping consistently to the right X Plugin operation.

  - WL#12942, Update README.md and add new CONTRIBUTING.md.

  - WL#13125, Support fully qualified hostnames longer than 60 characters.

  - Fix for Bug#95210 (29807741), ClassCastException in BlobFromLocator when connecting as jdbc:mysql:replication.

  - Fix for Bug#29591275, THE JAR FILE NEEDS TO CONTAIN A README AND LICENSE FILE.

  - WL#13124, Support new utf8mb4 bin collation.

  - WL#13009, DevAPI: Deprecate methods.

  - WL#11101, Remove de-cache and close of SSPSs on double call to close().

  - Fix for Bug#89133 (27356869)  CONTRIBUTION: UPDATE DATABASEMETADATA.JAVA.
    Thanks to Harald Aamot for his contribution.

  - Fix for Bug#11891000, DABATASEMETADATA.GETTABLES() IGNORES THE SCHEMA_PATTERN ARGUMENT.

  - Fix for Bug#94101 (29277648), SETTING LOGSLOWQUERIES SHOULD NOT AUTOMATICALLY ENABLE PROFILESQL FOR QUERIES.
    Thanks to Florian Agsteiner for the contribution.

  - Fix for Bug#74690 (20010454), PROFILEREVENT HOSTNAME HAS NO GETTER().

  - Fix for Bug#70677 (17640628), CONNECTOR J WITH PROFILESQL - LOG CONTAINS LOTS OF STACKTRACE DATA.

  - Fix for Bug#41172 (11750577), PROFILEREVENT.PACK() THROWS ARRAYINDEXOUTOFBOUNDSEXCEPTION.

  - Fix for Bug#27453692, CHARACTERS GET GARBLED IN CONCAT() IN PS WHEN USECURSORFETCH=TRUE.

  - Fix for Bug#94585 (29452669), GETTABLENAME() RETURNS NULL FOR A QUERY HAVING COUNT(*) WITH JDBC DRIVER V8.0.12.

  - Fix for Bug#94533 (29446100), GETOBJECT FOR BOXED PRIMITIVE TYPES DOESN'T RETURN NULL FOR NULL COLUMNS.

  - Fix for Bug#94442 (29446059), RESULTSETIMPL.GETDOUBLE IS INEFFICIENT BECAUSE OF BIGDECIMAL (RE)CONSTRUCTIONS.

Version 8.0.16

  - WL#12825, Remove third-party libraries from sources and bundles.

  - Fix for Bug#93590 (29054329), javax.net.ssl.SSLException: closing inbound before receiving peer's close_notify.
